TEST: cfg file gtest

--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -61,7 +61,8 @@ gtest_LDFLAGS = $(GTEST_LDFLAGS) -pthread -no-install -Wl,-dynamic-list-data \
 gtest_CFLAGS   = $(BASE_CFLAGS) $(AM_CPPFLAGS)
 gtest_CXXFLAGS = -std=gnu++11 \
 	$(BASE_CXXFLAGS) $(GTEST_CXXFLAGS) \
-	-DGTEST_UCM_HOOK_LIB_DIR="\"${abs_builddir}/ucm/test_dlopen/.libs\""
+	-DGTEST_UCM_HOOK_LIB_DIR="\"${abs_builddir}/ucm/test_dlopen/.libs\"" \
+	-DGTEST_UCC_TOP_SRCDIR="\"${UCC_TOP_SRCDIR}\""
 
 gtest_SOURCES =                     \
 	common/gtest-all.cc             \
@@ -95,6 +96,7 @@ gtest_SOURCES =                     \
 	utils/test_ep_map.cc            \
 	utils/test_lock_free_queue.cc   \
 	utils/test_math.cc              \
+	utils/test_cfg_file.cc          \
 	coll_score/test_score.cc        \
 	coll_score/test_score_str.cc    \
 	coll_score/test_score_update.cc
