--- a/src/components/tl/mlx5/Makefile.am
+++ b/src/components/tl/mlx5/Makefile.am
@@ -12,7 +12,9 @@ sources =             \
 	tl_mlx5_team.c    \
 	tl_mlx5_coll.h    \
 	tl_mlx5_ib.h	  \
-	tl_mlx5_ib.c
+	tl_mlx5_ib.c      \
+	tl_mlx5_pd.h      \
+	tl_mlx5_pd.c
 
 module_LTLIBRARIES = libucc_tl_mlx5.la
 libucc_tl_mlx5_la_SOURCES  = $(sources)
