TL/MLX5: ib utilities

--- a/src/components/tl/mlx5/Makefile.am
+++ b/src/components/tl/mlx5/Makefile.am
@@ -10,7 +10,9 @@ sources =             \
 	tl_mlx5_lib.c     \
 	tl_mlx5_context.c \
 	tl_mlx5_team.c    \
-	tl_mlx5_coll.h
+	tl_mlx5_coll.h    \
+	tl_mlx5_ib.h	  \
+	tl_mlx5_ib.c
 
 module_LTLIBRARIES = libucc_tl_mlx5.la
 libucc_tl_mlx5_la_SOURCES  = $(sources)
