TEST: Increase CI timeouts

--- a/.azure/azure-pipelines-pr.yml
+++ b/.azure/azure-pipelines-pr.yml
@@ -85,6 +85,7 @@ stages:
               make -s -j `nproc`
               make install
             displayName: Build ucx artifact
+            timeoutInMinutes: 20
           - bash: |
               set -xEe
               ./autogen.sh
@@ -94,7 +95,9 @@ stages:
                             --prefix=$(Build.Repository.LocalPath)/install --enable-gtest
               make -j install
             displayName: Build ucc artifact
+            timeoutInMinutes: 50
           - bash: |
               cd build
               make gtest
             displayName: Launch Gtest
+            timeoutInMinutes: 40
