TEST: Increace global timeout

--- a/.azure/azure-pipelines-pr.yml
+++ b/.azure/azure-pipelines-pr.yml
@@ -64,6 +64,7 @@ stages:
   - stage: Test
     jobs:
       - job: Gtest
+        timeoutInMinutes: 120
         workspace:
           clean: all
         pool:
