TL/CUDA: allgather(v) linear alg

--- a/src/components/tl/cuda/Makefile.am
+++ b/src/components/tl/cuda/Makefile.am
@@ -17,12 +17,14 @@ alltoallv =                      \
 allgather =                      \
 	allgather/allgather.h        \
 	allgather/allgather.c        \
-	allgather/allgather_ring.c
+	allgather/allgather_ring.c   \
+	allgather/allgather_linear.c
 
-allgatherv =                     \
-	allgatherv/allgatherv.h      \
-	allgatherv/allgatherv.c      \
-	allgatherv/allgatherv_ring.c
+allgatherv =                       \
+	allgatherv/allgatherv.h        \
+	allgatherv/allgatherv.c        \
+	allgatherv/allgatherv_ring.c   \
+	allgatherv/allgatherv_linear.c
 
 reduce_scatter =                         \
 	reduce_scatter/reduce_scatter.h      \
