UTIL: Move bitops files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,9 +48,13 @@ noinst_HEADERS =                      \
 	schedule/ucc_schedule_pipelined.h \
 	coll_score/ucc_coll_score.h       \
 	utils/arch/aarch64/cpu.h          \
+	utils/arch/aarch64/bitops.h       \
 	utils/arch/ppc64/cpu.h            \
+	utils/arch/ppc64/bitops.h         \
 	utils/arch/x86_64/cpu.h           \
+	utils/arch/x86_64/bitops.h        \
 	utils/arch/cpu.h                  \
+	utils/arch/bitops.h               \
 	utils/arch/cuda_def.h             \
 	utils/ucc_compiler_def.h          \
 	utils/ucc_log.h                   \
