CORE: reorganize pre-defined ucc name

--- a/configure.ac
+++ b/configure.ac
@@ -100,6 +100,7 @@ AC_SUBST([localmoduledir], ['$(abs_top_builddir)/modules']) # local directory fo
 AC_SUBST([objdir],         [${objdir}])                     # libtool objects dir, usually .libs
 AC_SUBST([shrext],         [${shrext_cmds}])                # libtool shared library extension
 AC_DEFINE_UNQUOTED([UCC_MODULE_SUBDIR], ["${modulesubdir}"], [UCC module sub-directory])
+AC_DEFINE_UNQUOTED([UCC_LIB_SO_NAME], ["libucc.so"], [Default name of UCC shared object])
 
 #
 # Additional m4 files
