CL/HIER: bcast 2step algorithm

--- a/src/components/cl/hier/Makefile.am
+++ b/src/components/cl/hier/Makefile.am
@@ -20,6 +20,11 @@ barrier =                     \
 	barrier/barrier.h         \
 	barrier/barrier.c
 
+bcast =                       \
+	bcast/bcast.h             \
+	bcast/bcast.c             \
+	bcast/bcast_2step.c
+
 sources =             \
 	cl_hier.h         \
 	cl_hier.c         \
@@ -31,7 +36,8 @@ sources =             \
 	$(allreduce)      \
 	$(alltoallv)      \
 	$(alltoall)       \
-	$(barrier)
+	$(barrier)        \
+	$(bcast)
 
 module_LTLIBRARIES         = libucc_cl_hier.la
 libucc_cl_hier_la_SOURCES  = $(sources)
