--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,7 @@ endif
 SUBDIRS = . $(cl_dirs) $(mc_dirs) $(ec_dirs)
 
 include components/tl/makefile.am
+include utils/Makefile.am
 
 lib_LTLIBRARIES  = libucc.la
 noinst_LIBRARIES =
@@ -36,6 +37,7 @@ nobase_dist_libucc_la_HEADERS =	\
 	ucc/api/ucc_status.h
 
 noinst_HEADERS =                      \
+	$(utils_noinst_headers)           \
 	core/ucc_global_opts.h            \
 	core/ucc_lib.h                    \
 	core/ucc_context.h                \
@@ -47,35 +49,6 @@ noinst_HEADERS =                      \
 	schedule/ucc_schedule.h           \
 	schedule/ucc_schedule_pipelined.h \
 	coll_score/ucc_coll_score.h       \
-	utils/arch/aarch64/cpu.h          \
-	utils/arch/aarch64/bitops.h       \
-	utils/arch/ppc64/cpu.h            \
-	utils/arch/ppc64/bitops.h         \
-	utils/arch/x86_64/cpu.h           \
-	utils/arch/x86_64/bitops.h        \
-	utils/arch/cpu.h                  \
-	utils/arch/bitops.h               \
-	utils/arch/cuda_def.h             \
-	utils/ucc_compiler_def.h          \
-	utils/ucc_log.h                   \
-	utils/ucc_parser.h                \
-	utils/ucc_component.h             \
-	utils/ucc_datastruct.h            \
-	utils/ucc_math.h                  \
-	utils/ucc_coll_utils.h            \
-	utils/ucc_list.h                  \
-	utils/ucc_string.h                \
-	utils/ucc_queue.h                 \
-	utils/ucc_proc_info.h             \
-	utils/khash.h                     \
-	utils/ucc_spinlock.h              \
-	utils/ucc_mpool.h                 \
-	utils/ucc_rcache.h                \
-	utils/profile/ucc_profile.h       \
-	utils/profile/ucc_profile_on.h    \
-	utils/profile/ucc_profile_off.h   \
-	utils/ucc_time.h                  \
-	utils/ucc_sys.h                   \
 	components/base/ucc_base_iface.h  \
 	components/cl/ucc_cl.h            \
 	components/cl/ucc_cl_log.h        \
@@ -94,6 +67,7 @@ noinst_HEADERS =                      \
 	components/topo/ucc_sbgp.h
 
 libucc_la_SOURCES =                   \
+	$(utils_libucc_la_sources)        \
 	core/ucc_lib.c                    \
 	core/ucc_constructor.c            \
 	core/ucc_global_opts.c            \
@@ -111,18 +85,6 @@ libucc_la_SOURCES =                   \
 	schedule/ucc_schedule_pipelined.c \
 	coll_score/ucc_coll_score.c       \
 	coll_score/ucc_coll_score_map.c   \
-	utils/ucc_component.c             \
-	utils/ucc_status.c                \
-	utils/ucc_mpool.c                 \
-	utils/ucc_math.c                  \
-	utils/ucc_proc_info.c             \
-	utils/ucc_string.c                \
-	utils/ucc_coll_utils.c            \
-	utils/ucc_parser.c                \
-	utils/profile/ucc_profile.c       \
-	utils/ucc_sys.c                   \
-	utils/arch/x86_64/cpu.c           \
-	utils/arch/aarch64/cpu.c          \
 	components/base/ucc_base_iface.c  \
 	components/cl/ucc_cl.c            \
 	components/tl/ucc_tl.c            \
