--- a/cmake/ucc-targets.cmake.in
+++ b/cmake/ucc-targets.cmake.in
@@ -1,8 +1,8 @@
 #
-# Copyright (c) 2021, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# Copyright (c) 2021-2022, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 #
 
-set(prefix "@prefix@")
+set(prefix ${CMAKE_CURRENT_LIST_DIR}/../../..)
 set(exec_prefix "@exec_prefix@")
 
 add_library(ucc::ucc SHARED IMPORTED)
