--- a/src/components/tl/mlx5/Makefile.am
+++ b/src/components/tl/mlx5/Makefile.am
@@ -16,7 +16,8 @@ sources =             \
 	tl_mlx5_wqe.h	  \
 	tl_mlx5_wqe.c	  \
 	tl_mlx5_pd.h      \
-	tl_mlx5_pd.c
+	tl_mlx5_pd.c      \
+	tl_mlx5_rcache.c
 
 module_LTLIBRARIES = libucc_tl_mlx5.la
 libucc_tl_mlx5_la_SOURCES  = $(sources)
