CI: changed centos8 to ubi8
Signed-off-by: artemry-nv <artemry@nvidia.com>

--- a/.ci/Dockerfile.ubi8
+++ b/.ci/Dockerfile.ubi8
@@ -1,5 +1,5 @@
 ARG CUDA_VER='11.8.0'
-FROM harbor.mellanox.com/torch-ucc/ucc/1.0.0/x86_64/centos8/cuda${CUDA_VER}:base
+FROM harbor.mellanox.com/torch-ucc/ucc/1.1.0/x86_64/ubi8/cuda${CUDA_VER}:base
 
 RUN rm -rf  ${SRC_DIR}/ucc
 COPY . ${SRC_DIR}/ucc
