REVIEW: second review fixes

--- a/contrib/ucc.conf
+++ b/contrib/ucc.conf
@@ -2,10 +2,10 @@
 # We mostly use "negate" interface so that default TL config
 # never throws warnings if some TLs are not available
 
-# Currently compiled tls: ucp,cuda,nccl,shm,sharp
+# Currently compiled tls: ucp,cuda,nccl,sharp
 
 # Default for CL_BASIC: all except sharp,nccl.
-# shm/cuda will silently disqualify themself for multinode teams
+# cuda will silently disqualify itself for multinode teams
 # but will be used on a single node
 UCC_CL_BASIC_TLS=^sharp,nccl
 
@@ -13,9 +13,9 @@ UCC_CL_BASIC_TLS=^sharp,nccl
 # Sharp should be explicitly enabled
 UCC_CL_HIER_NODE_SBGP_TLS=^sharp,nccl
 
-# shm,cuda are also disabled for NODE_LEADERS and NET
-UCC_CL_HIER_NODE_LEADERS_SBGP_TLS=^sharp,nccl,shm,cuda
-UCC_CL_HIER_NET_SBGP_TLS=^sharp,nccl,shm,cuda
+# cuda is also disabled for NODE_LEADERS and NET
+UCC_CL_HIER_NODE_LEADERS_SBGP_TLS=^sharp,nccl,cuda
+UCC_CL_HIER_NET_SBGP_TLS=^sharp,nccl,cuda
 
 # FULL_SBGP is currently only used for hierarchical alltoall
 # with ucp sbgp on top
