--- a/.ci/build_base_docker/Dockerfile.ubi8.base
+++ b/.ci/build_base_docker/Dockerfile.ubi8.base
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1.3-labs
 ARG CUDA_VER='11.8.0'
 FROM nvidia/cuda:${CUDA_VER}-devel-ubi8
 #==============================================================================
