--- a/.ci/build_base_docker/job_matrix.yaml
+++ b/.ci/build_base_docker/job_matrix.yaml
@@ -6,6 +6,7 @@ step_allow_single_selector: true
 registry_host: 'harbor.mellanox.com'
 registry_path: '/torch-ucc'
 registry_auth: '05d98651-e11c-4a57-9cc6-52df79014b89'
+DOCKER_BUILDKIT: '1'
 
 volumes:
   - { mountPath: '/hpc/local', hostPath: '/hpc/local' }
