Adapted for ubi8 docker image
Signed-off-by: artemry-nv <artemry@nvidia.com>

--- a/.ci/build_base_docker/Dockerfile.ubi8.base
+++ b/.ci/build_base_docker/Dockerfile.ubi8.base
@@ -20,20 +20,23 @@ RUN yum update -y
 
 RUN echo "INFO: DOCKER_BUILDKIT = ${DOCKER_BUILDKIT}"
 
-COPY <<EOF /etc/yum.repos.d/mlnx.repo
-[MLNX-BaseOS]
-name=RH $releasever - $basearch - Mirror
-baseurl=http://webrepo/rhel/8.6/x86_64/BaseOS/
-enabled=1
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release
-[MLNX-AppStream]
-name=RH $releasever - $basearch - Mirror
-baseurl=http://webrepo/rhel/8.6/x86_64/AppStream/
-enabled=1
-gpgcheck=0
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release
-EOF
+# TODO tmp
+RUN exit 1
+
+#COPY <<EOF /etc/yum.repos.d/mlnx.repo
+#[MLNX-BaseOS]
+#name=RH $releasever - $basearch - Mirror
+#baseurl=http://webrepo/rhel/8.6/x86_64/BaseOS/
+#enabled=1
+#gpgcheck=0
+#gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release
+#[MLNX-AppStream]
+#name=RH $releasever - $basearch - Mirror
+#baseurl=http://webrepo/rhel/8.6/x86_64/AppStream/
+#enabled=1
+#gpgcheck=0
+#gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release
+#EOF
 
 # '--nobest' is needed because there're some conflicts between ubi8 and mlnx repos
 RUN yum groupinstall -y \
