--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,7 @@ env:
   OPEN_MPI_LINK: https://github.com/open-mpi/ompi.git
   OPEN_MPI_BRANCH: v5.0.x
   IMB_LINK: https://github.com/intel/mpi-benchmarks.git
+  IMB_COLLS: allgather,allgatherv,allreduce,alltoall,alltoallv,barrier,bcast,reduce
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -46,10 +47,19 @@ jobs:
          cd /tmp/ompi
          git submodule update --init --recursive
     - name: Build OMPI
-      run: |
+      run: >
         cd /tmp/ompi
-        ./autogen.pl  --exclude pml-cm,mtl,coll-adapt,coll-han,coll-inter,coll-ftagree
-        ./configure --prefix=/tmp/ompi/install --enable-mpirun-prefix-by-default --disable-mpi-fortran --disable-man-pages --with-ucx=/tmp/ucx/install --with-ucc=/tmp/ucc/install
+
+        ./autogen.pl --exclude pml-cm,mtl,coll-adapt,coll-han,coll-inter,coll-ftagree
+
+        ./configure
+        --prefix=/tmp/ompi/install
+        --enable-mpirun-prefix-by-default
+        --disable-mpi-fortran
+        --disable-man-pages
+        --with-ucx=/tmp/ucx/install
+        --with-ucc=/tmp/ucc/install
+
         make -j install
     - name: Get IMB
       run: git clone ${IMB_LINK} /tmp/imb
@@ -58,5 +68,14 @@ jobs:
          cd /tmp/imb
          make CC=/tmp/ompi/install/bin/mpicc CXX=/tmp/ompi/install/bin/mpicxx CPPFLAGS="-DCHECK=1" -j IMB-MPI1
     - name: Run IMB-DCHECK
-      run: |
-         /tmp/ompi/install/bin/mpirun --mca pml ucx --mca pml_ucx_tls any --mca pml_ucx_devices any --mca coll_ucc_priority 100 --mca coll_ucc_enable 1 -np 8 -H localhost:8 --bind-to none /tmp/imb/IMB-MPI1 barrier,bcast,allreduce,allgather,alltoall,alltoallv,reduce -iter 10 -iter_policy off
+      run: >
+         /tmp/ompi/install/bin/mpirun
+         -np 8
+         -H localhost:8
+         --bind-to none
+         --mca pml ucx
+         --mca pml_ucx_tls any
+         --mca pml_ucx_devices any
+         --mca coll_ucc_priority 100
+         --mca coll_ucc_enable 1
+         /tmp/imb/IMB-MPI1 ${IMB_COLLS} -iter 10 -iter_policy off
