EC/ROCM: remove unused functions

--- a/src/components/ec/rocm/kernel/Makefile.am
+++ b/src/components/ec/rocm/kernel/Makefile.am
@@ -17,15 +17,14 @@ HIPCCFLAGS =                                     \
 LINK = $(LIBTOOL) --mode=link $(CC) -o $@
 
 .cu.o:
-	$(HIPCC) -c $< -o $@  $(HIPCCFLAGS) 
+	$(HIPCC) -c $< -o $@  $(HIPCCFLAGS)
 
 .cu.lo:
-	/bin/bash $(top_srcdir)/cuda_lt.sh "$(LIBTOOL)" $@ $(HIPCC) -c  $< $(HIPCCFLAGS) 
+	/bin/bash $(top_srcdir)/cuda_lt.sh "$(LIBTOOL)" $@ $(HIPCC) -c  $< $(HIPCCFLAGS)
 
 comp_noinst = libucc_ec_rocm_kernels.la
 
-libucc_ec_rocm_kernels_la_SOURCES  = ec_rocm_wait_kernel.cu     \
-                                     ec_rocm_executor_kernel.cu \
+libucc_ec_rocm_kernels_la_SOURCES  = ec_rocm_executor_kernel.cu \
                                      ec_rocm_reduce.cu
 libucc_ec_rocm_kernels_la_CPPFLAGS =
 
