--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -16,7 +16,9 @@ volumes:
 env:
   CUDA_VER: '11.4.2'
   
-  UCC_DOCKER_IMAGE_NAME: '${registry_host}${registry_path}'
+  UCC_URI_SUFFIX: 'ucc/${UCC_VERSION}/x86_64/centos8/cuda${CUDA_VER}'
+  UCC_DOCKER_IMAGE_NAME: '${registry_host}${registry_path}/${UCC_URI_SUFFIX}'
+  UCC_DOCKER_IMAGE_NAME_UBUNTU: '${registry_host}/ucx/aarch64/ubuntu20.04-mofed5-cuda11'
   NVIDIA_ROOT_DIR: '/opt/nvidia'
   SRC_DIR: '${NVIDIA_ROOT_DIR}/src'
   BIN_DIR: '${NVIDIA_ROOT_DIR}/bin'
@@ -40,15 +42,27 @@ timeout_minutes: 360
 
 steps:
   #============================================================================
-  - name: Start docker
+  - name: Start docker 
     agentSelector: "{nodeLabel: 'swx-clx01'}"
-    #containerSelector: "{name:'skip-container'}"
+    containerSelector: "{name:'centos8'}"
     run: |
       echo "INFO: Start docker containers"
       DOCKER_IMAGE_NAME="${UCC_DOCKER_IMAGE_NAME}:${BUILD_ID}"
       docker pull ${DOCKER_IMAGE_NAME}
       docker create -ti --rm $DOCKER_OPT ${DOCKER_IMAGE_NAME} /bin/bash > ${WORKSPACE}/ucc_docker.id
       docker start $(cat ${WORKSPACE}/ucc_docker.id)
+    
+  - name: Start docker Ubuntu20
+    agentSelector: "{nodeLabel: 'swx-clx01'}"
+    containerSelector: "{name:'ubuntu2004'}"
+    run: |
+        echo "INFO: Start docker containers"
+        DOCKER_IMAGE_NAME="${UCC_DOCKER_IMAGE_NAME_UBUNTU}:${BUILD_ID}"
+        docker pull ${DOCKER_IMAGE_NAME}
+        docker create -ti --rm $DOCKER_OPT ${DOCKER_IMAGE_NAME} /bin/bash > ${WORKSPACE}/ucc_docker.id
+        docker start $(cat ${WORKSPACE}/ucc_docker.id)
+    
+
 
   #============================================================================
   - name: Run UCC / Torch-UCC tests
