DOCS: aligning conf file

--- a/contrib/ucc.conf
+++ b/contrib/ucc.conf
@@ -21,6 +21,8 @@ UCC_CL_HIER_NET_SBGP_TLS=^sharp,nccl,cuda
 # with ucp sbgp on top
 UCC_CL_HIER_FULL_SBGP_TLS=ucp
 
+# Tuning sections, currently only supports TL/UCP
+#Intel Broadwell:
 [vendor=intel model=broadwell team_size=28 ppn=28 nnodes=1]
 UCC_TL_UCP_ALLREDUCE_KN_RADIX=2
 UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=7
@@ -40,3 +42,50 @@ UCC_TL_UCP_TUNE=allreduce:0-16k:@0#allreduce:16k-inf:@1
 UCC_TL_UCP_ALLREDUCE_KN_RADIX=8
 UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=8
 UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+#Intel Skylake:
+[vendor=intel model=skylake team_size=40 ppn=40 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=0-128k:host:2,128k-inf:host:8
+UCC_TL_UCP_TUNE=allreduce:0-2k:@0#allreduce:2k-inf:@1
+
+[vendor=intel model=skylake team_size=2 ppn=1 nnodes=2]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=2
+UCC_TL_UCP_TUNE=allreduce:0-16k:@0#allreduce:16k-inf:@1
+
+[vendor=intel model=skylake team_size=4 ppn=1 nnodes=4]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=4
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4
+UCC_TL_UCP_TUNE=allreduce:0-8k:@0#allreduce:8k-inf:@1
+
+[vendor=intel model=skylake team_size=8 ppn=1 nnodes=8]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8k:host:8,8k-inf:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=8
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=intel model=skylake team_size=32 ppn=1 nnodes=32]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8k:host:8,8k-inf:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=8
+UCC_TL_UCP_TUNE=allreduce:0-2k:@0#allreduce:2k-inf:@1
+
+#Amd Rome:
+[vendor=amd model=rome team_size=128 ppn=128 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=0-64k:host:4,64k-inf:host:8
+UCC_TL_UCP_TUNE=allreduce:0-1k:@0#allreduce:1k-inf:@1
+
+[vendor=amd model=rome team_size=2 ppn=1 nnodes=2]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=2
+UCC_TL_UCP_TUNE=allreduce:0-256k:@0#allreduce:256k-inf:@1
+
+[vendor=amd model=rome team_size=4 ppn=1 nnodes=4]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=4
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4
+UCC_TL_UCP_TUNE=allreduce:0-16k:@0#allreduce:16k-inf:@1
+
+[vendor=amd model=rome team_size=8 ppn=1 nnodes=8]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8k:host:8,8k-inf:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=8
+UCC_TL_UCP_TUNE=allreduce:0-8k:@0#allreduce:8k-inf:@1
