--- a/src/components/tl/mlx5/Makefile.am
+++ b/src/components/tl/mlx5/Makefile.am
@@ -12,6 +12,8 @@ sources =             \
 	tl_mlx5_team.c    \
 	tl_mlx5_coll.h    \
 	tl_mlx5_ib.h	  \
+	tl_mlx5_wqe.h	  \
+	tl_mlx5_wqe.c	  \
 	tl_mlx5_ib.c
 
 module_LTLIBRARIES = libucc_tl_mlx5.la
