TEST: adding gatherv gtest

--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -88,6 +88,7 @@ gtest_SOURCES =                     \
 	coll/test_allgather.cc          \
 	coll/test_allgatherv.cc         \
 	coll/test_gather.cc         	\
+	coll/test_gatherv.cc         	\
 	coll/test_bcast.cc              \
 	coll/test_reduce.cc             \
 	coll/test_allreduce.cc          \
