--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -24,7 +24,8 @@ alltoall =                       \
 	alltoall/alltoall.h          \
 	alltoall/alltoall.c          \
 	alltoall/alltoall_onesided.c \
-	alltoall/alltoall_pairwise.c
+	alltoall/alltoall_pairwise.c \
+	alltoall/alltoall_bruck.c
 
 alltoallv =                        \
 	alltoallv/alltoallv.h          \
