TL/MLX5: a2a part 1 -- coll init

--- a/src/components/tl/mlx5/Makefile.am
+++ b/src/components/tl/mlx5/Makefile.am
@@ -4,6 +4,12 @@
 
 if TL_MLX5_ENABLED
 
+alltoall =                    \
+	alltoall/alltoall.h       \
+	alltoall/alltoall.c       \
+	alltoall/alltoall_mkeys.h \
+	alltoall/alltoall_mkeys.c
+
 sources =             \
 	tl_mlx5.h         \
 	tl_mlx5.c         \
@@ -19,7 +25,8 @@ sources =             \
 	tl_mlx5_pd.c      \
 	tl_mlx5_rcache.c  \
 	tl_mlx5_dm.c      \
-	tl_mlx5_dm.h
+	tl_mlx5_dm.h      \
+	$(alltoall)
 
 module_LTLIBRARIES = libucc_tl_mlx5.la
 libucc_tl_mlx5_la_SOURCES  = $(sources)
