BUILD: add html report

--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -54,7 +54,7 @@ runs_on_dockers:
 # bare metal
 runs_on_agents:
   - nodeLabel: "swx-clx01"
-
+  - nodeLabel: "ml-test-node-gpu"
 timeout_minutes: 360
 
 steps:
@@ -72,7 +72,7 @@ steps:
   #============================================================================
   - name: Run Coverity
     credentialsId: "bc9a18d3-1153-449c-b924-7fc9249c9cc0"
-    agentSelector: "{nodeLabel: 'swx-clx01'}"
+    agentSelector: "{nodeLabel: 'ml-test-node-gpu'}"
     run: |
       export UCC_PASSWORD=$UCC_PASSWORD
       export UCC_USERNAME=$UCC_USERNAME
